# lumen-platform

./: .dockerignore  .gitignore  CMakeLists.txt  COPILOT_BIBLE.md  README.md  WALKTHROUGH_V2.md  copilot_implementation_plan.md  deploy-render.sh  docker-compose.yml  ecosystem.config.js  package.json  render.yaml
.github/workflows/: backend.yml  deploy.yml  release.yml
backend/: .env  .env.example  Dockerfile  jest.config.js  lumen  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: config.ts  server.ts
backend/src/copilot/: README.md  index.ts  routes.ts
backend/tests/: ingest.test.ts  security.test.ts
common/config/: manager.cpp  manager.hpp
docs/: deployment.md
lumen-cli/: CMakeLists.txt
lumen-cli/src/: main.cpp
lumen-cli/src/cli/: commands.cpp  commands.hpp
lumen-cli/src/shell/: repl.cpp  repl.hpp  system_shell.cpp  system_shell.hpp
registry-backend/: .dockerignore  .env  Dockerfile  package.json  tsconfig.json
registry-backend/prisma/: schema.prisma
registry-backend/src/: server.ts
scripts/: install.sh
vscode-extension/: language-configuration.json  lumen-lang-0.1.0.vsix  package-lock.json  package.json
vscode-extension/snippets/: lumen.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: lumen.tmLanguage.json
web-ide-backend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
web-ide-backend/src/: server.ts
website/: .dockerignore  Dockerfile  lumen  package-lock.json  package.json  vercel.json
website/public/: install.sh
(+40 files in other folders)
